# remove-refusals-with-transformers

./: compute_refusal_dir.py  inference.py  main.py  pyproject.toml
