[project]
name = "remove-refusals-with-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "kernels>=0.9.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "triton>=3.4.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
